syntax = "proto3";

package worker.database.v1;

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "validate/validate.proto";
import "worker/database/v1/mutation_type.proto";
import "worker/database/v1/entity_type.proto";

option java_multiple_files = true;
option java_package = "com.google.worker.database.v1";
option go_package = "github.com/10Narratives/distgo-db/pkg/proto/worker/database/v1;dbv1";

service WALService {
  rpc ListWALEntries(ListWALEntriesRequest) returns (ListWALEntriesResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/wal"
    };
  }

  rpc TruncateWAL(TruncateWALRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1alpha1/wal:truncate"
      body: "*"
    };
  }
}

message WALEntry {
  string id = 1 [
    (validate.rules).string.uuid = true,
    (google.api.field_behavior) = OUTPUT_ONLY
  ];
  EntityType entity_type = 2 [
    (validate.rules).enum.defined_only = true,
    (google.api.field_behavior) = REQUIRED
  ];
  MutationType operation_type = 3 [
    (validate.rules).enum.defined_only = true,
    (google.api.field_behavior) = REQUIRED
  ];
  oneof payload {
    DatabasePayload database_payload = 4;
    CollectionPayload collection_payload = 5;
    DocumentPayload document_payload = 6;
  }
  google.protobuf.Timestamp timestamp = 7 [(google.api.field_behavior) = OUTPUT_ONLY];
}

message DatabasePayload {
  string database_id = 1 [
    (validate.rules).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];
  bytes data = 2;
}

message CollectionPayload {
  string database_id = 1 [
    (validate.rules).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];
  string collection_id = 2 [
    (validate.rules).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];
  bytes data = 3;
}

message DocumentPayload {
  string database_id = 1 [
    (validate.rules).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];
  string collection_id = 2 [
    (validate.rules).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];
  string document_id = 3 [
    (validate.rules).string.min_len = 1,
    (google.api.field_behavior) = REQUIRED
  ];
  bytes data = 4;
}

message ListWALEntriesRequest {
  int32 page_size = 1 [
    (validate.rules).int32 = { gte: 0, lte: 1000 }
  ];
  string page_token = 2;
  google.protobuf.Timestamp start_time = 3;
  google.protobuf.Timestamp end_time = 4;
  EntityType entity_type_filter = 5;
  MutationType operation_type_filter = 6;
}

message ListWALEntriesResponse {
  repeated WALEntry entries = 1;
  string next_page_token = 2;
}

message TruncateWALRequest {
  google.protobuf.Timestamp before = 1;
}